# Complex-YOLOv3

./: .gitignore  check_dataset.py  constants.py  pyproject.toml  requirements-full.txt  requirements.txt  test_both_side_detection.py  test_detection.py  test_tracking_complex_yolo.py  test_tracking_yolo.py  test_tracking_yolo_vis.py
bytetrack/: run_tracker.py  timer.py  visualize.py
bytetrack/tracker/: byte_tracker.py
checkpoints/: yolov3_ckpt_epoch-298.pth
conda-env/: environment.yml
data/: .gitignore  run_derive_image_sets.sh  run_download_and_unzip.sh  run_download_and_unzip_object.sh  run_gen_sample.sh  run_kitti_data_prep.sh
data/KITTI/ImageSets2/: test.txt  train.txt
docs/: index.md
docs/images/output/: .gitignore  bev-output.avi  img2d-output.avi
docs/images/output/complex-yolo-detect-only/: bev-output.avi  img2d-output.avi
docs/images/output/complex-yolo-track/: bev-output-complex-yolo-track.avi  cam-output-complex-yolo-track.avi  cam-output-complex-yolo.avi
docs/images/output/complex-yolo-track-img/: cam-output-complex-yolo.avi
docs/images/output/yolo-track/: cam-output-yolov5.avi  cam-output-yolov7.avi
docs/req/: linux.poetry.req.txt  linux.venv38.req.txt
modules/: images_to_video.py  video_to_gif.py
scripts/: openconv.local.sh  openconv.sh
utils/: config.py  kitti_bev_utils.py  kitti_dataset.py  kitti_prediction_utils.py  kitti_utils.py  kitti_yolo_dataset_v2.py  kitty_tracking_utils.py  mayavi_viewer.py  pred_to_kitti.py
